# SkyVision3D

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.json
app/core/: __init__.py  application.py  input_handler.py  math_utils.py  timer.py
app/earth/: renderer.py
app/flights/: manager.py  renderer.py
app/input/: __init__.py  handler.py
app/navigation/: coordinator.py
app/planets/: manager.py  renderer.py
app/renderer/: __init__.py  camera.py  engine.py  mesh_manager.py  shader_manager.py  texture_manager.py
